# TypeChat

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .npmrc  .prettierrc  .prettierrc.js  README.md  SUPPORT.md  TODO.md  TypeChat.code-workspace  expected.txt  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  zod-4.4.3.tgz
.devcontainer/: devcontainer.json
.github/: dependabot.yml
dotnet/: README.md
examples/: .gitignore  README.md
python/: .gitignore  README.md  ctest.py  example1.yml  foodOrderSchema.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json
python/.devcontainer/: DockerFile  devcontainer.json
python/examples/: README.md
python/examples/calendar/: README.md  demo.py  input.txt  schema.py
python/examples/coffee-shop/: demo.py  schema.py
python/examples/coffeeShop/: README.md  demo.py  input2.txt  schema.py
python/examples/drawing/: __init__.py  demo.py  input.txt  render.py  schema.py
python/examples/healthData/: README.md  demo.py  schema.py  translator.py
python/examples/math/: README.md  ast_comment_handling.py  demo.py  input.txt  program.py  pythonic_comment_handling.py  schema.py  schemaV2.py  schema_with_comments.py
python/examples/multiSchema/: README.md  agents.py  demo.py  router.py  translator.py
python/examples/music/: README.md  client.py  demo.py  schema.py  spotipyWrapper.py
python/examples/restaurant/: README.md  demo.py  schema.py
python/examples/sentiment/: README.md  demo.py  input.txt  schema.py
python/notebooks/: calendar.ipynb  coffeeShop.ipynb  healthData.ipynb  math.ipynb  music.ipynb  restaurant.ipynb  sentiment.ipynb
python/src/typechat/: __about__.py  __init__.py  py2ts.py  ts2str.py
python/src/typechat/_internal/: interactive.py  model.py  result.py  translator.py  validator.py
python/src/typechat/_internal/ts_conversion/: __init__.py  python_type_to_ts_nodes.py  ts_node_to_string.py  ts_type_nodes.py
python/tests/: __init__.py  abstract_collections.py  coffeeshop.py  coffeeshop_deprecated.py  generic_alias_1.py  generic_alias_2.py  hello_dataclasses.py  hello_world.py  test_coffeeshop.py  test_conflicting_names_1.py  test_dataclasses.py  test_generic_alias_1.py  test_generic_alias_2.py  test_generic_alias_3.py  test_generic_alias_4.py  test_generric_alias_1.py  test_hello_world.py  test_translator.py  test_tuple_errors_1.py  test_tuples_1.py  test_type_alias_syntax.py  test_validator.py  utilities.py
python/tests/__py3.11_snapshots__/test_conflicting_names_1/: test_conflicting_names_1.schema.d.ts
python/tests/__py3.11_snapshots__/test_hello_world/: test_generic_alias1.schema.d.ts
python/tests/__py3.12+_snapshots__/test_generic_alias_4/: test_generic_alias4.schema.d.ts
python/tests/__py3.12_snapshots__/test_conflicting_names_1/: test_conflicting_names_1.schema.d.ts
python/tests/__py3.14_snapshots__/test_hello_world/: test_generic_alias1.schema.d.ts
python/tests/__snapshots__/: test_coffeeshop.ambr  test_conflicting_names_1.ambr  test_dataclasses.ambr  test_generic_alias_1.ambr  test_generic_alias_2.ambr  test_generric_alias_1.ambr  test_hello_world.ambr  test_translator.ambr  test_tuple_errors_1.ambr  test_tuples_1.ambr
python/tests/__snapshots__/test_coffeeshop/: test_coffeeshop_schema.schema.d.ts
python/tests/__snapshots__/test_dataclasses/: test_data_classes.schema.d.ts
python/tests/__snapshots__/test_generic_alias_1/: test_generic_alias1.schema.d.ts
python/tests/__snapshots__/test_generic_alias_2/: test_generic_alias1.schema.d.ts
python/tests/__snapshots__/test_tuple_errors_1/: test_tuples_2.schema.d.ts
python/tests/__snapshots__/test_tuples_1/: test_tuples_1.schema.d.ts
python/tests/__snapshots__/test_type_alias_syntax/: test_type_alias_union1.schema.d.ts
python/utils/python_comment_handler/: python_comment_handler.py
python/utils/python_comment_handler/examples/: commented_math_schema.py  commented_music_schema.py  commented_restaurant_schema.py  commented_sentiment_schema.py
site/: .eleventy.js  book.toml  jsconfig.json  package-lock.json  package.json
src/: calTest.ts  config.ts  core.js  core.ts  embeddings.js  embeddings.ts  exception.ts  index.ts  interactive.ts  llm.ts  model.ts  openai.js  openai.ts  pizzaTest.ts  pizzaobj.d.ts  program.ts  result.ts  retry.js  retry.ts  tests.ts  tsconfig.json  typeChatConfigSample.json  typechat.ts  typechatConfig.ts  typechatException.js  typechatException.ts  validate.ts  vectormath.js  vectormath.ts  verify.ts
tests/: config_test.ts  embedding_test.ts  openai_test.ts  random.ts  readme.md  runner.ts  sample.test.ts  testing.ts  (+1 more)
(+341 files in other folders)
