[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "typechat"
version = "0.1.0"
description = "TypeChat is a library that makes it easy to build natural language interfaces using types."
authors = ["Microsoft Corporation"]
license = "MIT"
readme = "README.md"
packages = [{include = "typechat", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
pydantic = "^2.6.3"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
pytest = "^8.0.2"
typing-extensions = "^4.10.0"
syrupy = "^4.6.1"
spotipy2 = "^0.6.1"

